# transcription_services_to_srt

./: .gitignore  README.md  pyproject.toml
src/sanchit_gandhi_whisper_jax/: to_srt.py
src/yescribe_ai/: to_srt.py
