[project]
name = "whisper-services-to-srt"
version = "0.1.0"
description = "Add your description here"
license = { file = "LICENSE.md" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
]

[dependency-groups]
dev = ["mypy>=1.13.0", "ruff>=0.8.0"]
